      address. The function now uses 32 and 64-bit safe eGetPtr UD function.
    - Fixed the returned DAC values of the readDefaultsConfig method to little
      endian.
    - Fixed many Pyflakes warnings such as unused variables and unused imports.
    - Removed use of "import *" from most modules.
- Next Release
    - Moved the ctypes import after socket to prevent an "Aborted (core dump)"
      exit error on Cygwin.
    - _makeDeviceFromHandle function now gets/sets the U3's bootloaderVersion.
    - Fixed the reset method for LabJackPython module's Device class.
    - Updated the reset method of the Device class to perform a hard and soft
      reset on Linux and Mac OS X like the Windows UD function ResetLabJack.
    - The spi() method of U3, U6, and UE9 has changed.  The keyword argument
      "CSPINNum" has been renamed to "CSPinNum" to be consistent with the other
      keyword arguments.  The old "CSPINNum" will still work but is deprecated
      and will be removed in a future version.
    - Removed the u3SampleAndLogToCloudDot.py example.  The CloudDot service
      this example uses is no longer available.
    - Updated the U6 streamConfig docstring.
    - Fixed a bug in the U6 processStreamData method where high-resolution
      calibration constants were being used on a U6-Pro by mistake when
      calculating the voltage value.
    - Replaced print statements with print function calls in the modules for
      Python 3 compatibility.
    - Updated LabJackException for Windows Python 3 compatibility.
    - Fixed a Python 3 bug for U6 and UE9 i2c methods where float division was
      being used to calculate an integer value.
    - Updated LJTick-DAC.py to use calibrated analog input readings and use the
      same getAIN call to read analog inputs.
    - Removed DCA-10 example as the product is discontinued.
    - Updated u3allio.py to use calibration analog input readings.
    - Added argument check to u3allio.py and u6allio.py. 